--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 
 <body>
           <div class="container">
-                    <input id="searchbox" type="text" placeholder="Type to search">
-                    <button class="btn btn-primary" onclick="doAjax()">Search Now</button>
+                    <div class="input">
+                              <input id="searchbox" type="search" placeholder="Type to search">
+                    </div>
+                    <div class="button">
+                              <button class="btn btn-primary" onclick="doAjax()">Search Now</button>
+                    </div>
                     <!-- Search bar -->
                     <div id="list"></div>
 
