--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
 
 <body>
           <div class="container">
-                    <div class="input">
-                              <input id="searchbox" type="search" placeholder="Type to search">
-                    </div>
-                    <div class="button">
-                              <button class="btn btn-primary" onclick="doAjax()">Search Now</button>
+                    <div class="navbar">
+                              <a href="index.html"><img
+                                                  src="https://thumbs.dreamstime.com/b/music-home-icon-logo-vector-template-230769801.jpg"
+                                                  alt="music-app"></a>
+                              <div class="input">
+                                        <input id="searchbox" type="search" placeholder="Type to search">
+                              </div>
+                              <div class="button">
+                                        <button class="btn btn-primary" onclick="doAjax()">Search Now</button>
+                              </div>
                     </div>
                     <!-- Search bar -->
                     <div id="list"></div>
