--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
                               <a href="index.html"><img
                                                   src="https://thumbs.dreamstime.com/b/music-home-icon-logo-vector-template-230769801.jpg"
                                                   alt="music-app"></a>
-                              <div class="input">
-                                        <input id="searchbox" type="search" placeholder="Type to search">
-                              </div>
-                              <div class="button">
-                                        <button class="btn btn-primary" onclick="doAjax()">Search Now</button>
+                              <div class="searchboxSubmit">
+                                        <div class="input">
+                                                  <input id="searchbox" type="search" placeholder="Music Search here">
+                                        </div>
+                                        <div class="button">
+                                                  <button class="btn btn-primary" onclick="doAjax()">Search Now</button>
+                                        </div>
                               </div>
                     </div>
                     <!-- Search bar -->
