--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                                   <input id="searchbox" type="search" placeholder="Music Search here">
                                         </div>
                                         <div class="button">
-                                                  <button class="btn btn-primary" onclick="doAjax()">Search Now</button>
+                                                  <button class="btn btn-primary" onclick="doAjax()">Search</button>
                                         </div>
                               </div>
                     </div>
