--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
           <script src="ajax.js"></script>
 </head>
 
-<body>
+<body onload="myLoadingpage()">
+          <!-- =========using for preloading======== -->
+          <div id="loading"></div>
+
+
+
           <div class="container">
                     <div class="navbar">
                               <a href="index.html"><img
