--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body onload="myLoadingpage()">
-          <!-- =========using for preloading======== -->
-          <div id="loading"></div>
+          <!-- =========using for preloading========
+          <div id="loading"></div> -->
 
 
 
