--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
           <script src="ajax.js"></script>
 </head>
 
-<body onload="myLoadingpage()">
-          <!-- =========using for preloading========
-          <div id="loading"></div> -->
+<body>
+          <!-- =========using for preloading======== -->
+          <div id="loading"></div>
+
+
 
 
 
